[viewer] fix: text blocks line spacing and min height (#3496)

--- a/packages/common/web/statics/styles/fonts.scss
+++ b/packages/common/web/statics/styles/fonts.scss
@@ -93,10 +93,7 @@ $text-decorations: (
   font-weight: var(--ricos-custom-#{$name}-font-weight, unset);
   text-decoration: var(--ricos-custom-#{$name}-text-decoration, map-get($text-decorations, $name));
   line-height: var(--ricos-custom-#{$name}-line-height, map-get($text-heights, $name));
-  min-height: var(
-    --ricos-custom-#{$name}-min-height,
-    if($isViewer, map-get($min-heights, $name), unset)
-  );
+  min-height: var(--ricos-custom-#{$name}-min-height, map-get($min-heights, $name));
   @if $name == 'p' {
     color: $ricos-p-color;
   }
